@@ -405,350 +405,6 @@ done:
 }
 
 /**
- * @brief Defragments all fragmented files entirely, if possible.
- * @details 
- * - This routine fills free space areas from the beginning of the
- * volume regardless of the best matching rules.
- */
-int defragment_small_files_walk_free_regions(udefrag_job_parameters *jp)
-{
-    ULONGLONG time, tm;
-    ULONGLONG defragmented_files;
-    winx_volume_region *rgn;
-    udefrag_fragmented_file *f, *f_largest;
-    ULONGLONG length;
-    char buffer[32];
-    ULONGLONG clusters_to_move;
-    winx_file_info *file;
-    ULONGLONG file_length;
-    
-    jp->pi.current_operation = VOLUME_DEFRAGMENTATION;
-    jp->pi.moved_clusters = 0;
-
-    /* free as much temporarily allocated space as possible */
-    release_temp_space_regions(jp);
-    
-    /* no files are excluded by this task currently */
-    for(f = jp->fragmented_files; f; f = f->next){
-        f->f->user_defined_flags &= ~UD_FILE_CURRENTLY_EXCLUDED;
-        if(f->next == jp->fragmented_files) break;
-    }
-
-    /* open the volume */
-    jp->fVolume = winx_vopen(winx_toupper(jp->volume_letter));
-    if(jp->fVolume == NULL)
-        return (-1);
-
-    time = start_timing("defragmentation",jp);
-
-    /* fill free regions in the beginning of the volume */
-    defragmented_files = 0;
-    for(rgn = jp->free_regions; rgn; rgn = rgn->next){
-        if(jp->termination_router((void *)jp)) break;
-        
-        /* skip micro regions */
-        if(rgn->length < 2) goto next_rgn;
-
-        /* find largest fragmented file that fits in the current region */
-        do {
-            if(jp->termination_router((void *)jp)) goto done;
-            f_largest = NULL, length = 0; tm = winx_xtime();
-            for(f = jp->fragmented_files; f; f = f->next){
-                file_length = f->f->disp.clusters;
-                if(file_length > length && file_length <= rgn->length){
-                    if(can_defragment(f->f,jp) && !is_mft(f->f,jp)){
-                        f_largest = f;
-                        length = file_length;
-                    }
-                }
-                if(f->next == jp->fragmented_files) break;
-            }
-            jp->p_counters.searching_time += winx_xtime() - tm;
-            if(f_largest == NULL) goto next_rgn;
-            file = f_largest->f; /* f_largest may be destroyed by move_file */
-            
-            /* move the file */
-            clusters_to_move = file->disp.clusters;
-            if(move_file(file,file->disp.blockmap->vcn,
-             clusters_to_move,rgn->lcn,0,jp) >= 0){
-                if(jp->udo.dbgprint_level >= DBG_DETAILED)
-                    DebugPrint("Defrag success for %ws",file->path);
-                defragmented_files ++;
-            } else {
-                DebugPrint("Defrag failure for %ws",file->path);
-                /* exclude file from the current task */
-                file->user_defined_flags |= UD_FILE_CURRENTLY_EXCLUDED;
-            }
-            
-            /* skip locked files here to prevent skipping the current free region */
-        } while(is_locked(file));
-        
-        /* after file moving continue from the first free region */
-        if(jp->free_regions == NULL) break;
-        rgn = jp->free_regions->prev;
-        continue;
-        
-    next_rgn:
-        if(rgn->next == jp->free_regions) break;
-    }
-
-done:
-    /* display amount of moved data and number of defragmented files */
-    DebugPrint("%I64u files defragmented",defragmented_files);
-    DebugPrint("%I64u clusters moved",jp->pi.moved_clusters);
-    winx_bytes_to_hr(jp->pi.moved_clusters * jp->v_info.bytes_per_cluster,1,buffer,sizeof(buffer));
-    DebugPrint("%s moved",buffer);
-    stop_timing("defragmentation",time,jp);
-    winx_fclose(jp->fVolume);
-    jp->fVolume = NULL;
-    return 0;
-}
-
-/**
- * @brief Defragments all fragmented files entirely, if possible.
- * @details This routine fills free space areas respect to the best matching rules.
- */
-int defragment_small_files_walk_fragmented_files(udefrag_job_parameters *jp)
-{
-    ULONGLONG time, tm;
-    ULONGLONG defragmented_files;
-    winx_volume_region *rgn;
-    udefrag_fragmented_file *f, *f_largest;
-    ULONGLONG length;
-    char buffer[32];
-    ULONGLONG clusters_to_move;
-    winx_file_info *file;
-    ULONGLONG file_length;
-
-    jp->pi.current_operation = VOLUME_DEFRAGMENTATION;
-    jp->pi.moved_clusters = 0;
-
-    /* free as much temporarily allocated space as possible */
-    release_temp_space_regions(jp);
-
-    /* no files are excluded by this task currently */
-    for(f = jp->fragmented_files; f; f = f->next){
-        f->f->user_defined_flags &= ~UD_FILE_CURRENTLY_EXCLUDED;
-        if(f->next == jp->fragmented_files) break;
-    }
-
-    /* open the volume */
-    jp->fVolume = winx_vopen(winx_toupper(jp->volume_letter));
-    if(jp->fVolume == NULL)
-        return (-1);
-
-    time = start_timing("defragmentation",jp);
-
-    /* find best matching free region for each fragmented file */
-    defragmented_files = 0;
-    while(jp->termination_router((void *)jp) == 0){
-        f_largest = NULL, length = 0; tm = winx_xtime();
-        for(f = jp->fragmented_files; f; f = f->next){
-            file_length = f->f->disp.clusters;
-            if(file_length > length){
-                if(can_defragment(f->f,jp) && !is_mft(f->f,jp)){
-                    f_largest = f;
-                    length = file_length;
-                }
-            }
-            if(f->next == jp->fragmented_files) break;
-        }
-        jp->p_counters.searching_time += winx_xtime() - tm;
-        if(f_largest == NULL) break;
-        file = f_largest->f; /* f_largest may be destroyed by move_file */
-
-        rgn = find_matching_free_region(jp,file->disp.blockmap->lcn,file->disp.clusters,FIND_MATCHING_RGN_ANY);
-        if(jp->termination_router((void *)jp)) break;
-        if(rgn == NULL){
-            /* exclude file from the current task */
-            file->user_defined_flags |= UD_FILE_CURRENTLY_EXCLUDED;
-        } else {
-            /* move the file */
-            clusters_to_move = file->disp.clusters;
-            if(move_file(file,file->disp.blockmap->vcn,
-             clusters_to_move,rgn->lcn,0,jp) >= 0){
-                if(jp->udo.dbgprint_level >= DBG_DETAILED)
-                    DebugPrint("Defrag success for %ws",file->path);
-                defragmented_files ++;
-            } else {
-                DebugPrint("Defrag failure for %ws",file->path);
-                /* exclude file from the current task */
-                file->user_defined_flags |= UD_FILE_CURRENTLY_EXCLUDED;
-            }
-        }
-    }
-    
-    /* display amount of moved data and number of defragmented files */
-    DebugPrint("%I64u files defragmented",defragmented_files);
-    DebugPrint("%I64u clusters moved",jp->pi.moved_clusters);
-    winx_bytes_to_hr(jp->pi.moved_clusters * jp->v_info.bytes_per_cluster,1,buffer,sizeof(buffer));
-    DebugPrint("%s moved",buffer);
-    stop_timing("defragmentation",time,jp);
-    winx_fclose(jp->fVolume);
-    jp->fVolume = NULL;
-    return 0;
-}
-
-/**
- * @brief Defragments all fragmented files at least 
- * partially, when possible.
- * @details
- * - If some file cannot be defragmented due to its size,
- * this routine marks it by UD_FILE_TOO_LARGE flag.
- * - This routine fills free space areas starting
- * from the biggest one to concatenate as much fragments
- * as possible.
- * - This routine uses UD_MOVE_FILE_CUT_OFF_MOVED_CLUSTERS
- * flag to avoid infinite loops, therefore processed file
- * maps become cut. This is not a problem while we use
- * a single defragment_big_files call after all other
- * volume processing steps.
- */
-int defragment_big_files(udefrag_job_parameters *jp)
-{
-    ULONGLONG time, tm;
-    ULONGLONG defragmented_files;
-    winx_volume_region *rgn_largest;
-    udefrag_fragmented_file *f, *f_largest;
-    ULONGLONG target, length;
-    winx_blockmap *block, *first_block, *longest_sequence;
-    ULONGLONG n_blocks, max_n_blocks, longest_sequence_length;
-    ULONGLONG remaining_clusters;
-    char buffer[32];
-    winx_file_info *file;
-    ULONGLONG file_length;
-
-    jp->pi.current_operation = VOLUME_DEFRAGMENTATION;
-    jp->pi.moved_clusters = 0;
-
-    /* free as much temporarily allocated space as possible */
-    release_temp_space_regions(jp);
-
-    /* no files are excluded by this task currently */
-    for(f = jp->fragmented_files; f; f = f->next){
-        f->f->user_defined_flags &= ~UD_FILE_CURRENTLY_EXCLUDED;
-        if(f->next == jp->fragmented_files) break;
-    }
-
-    /* open the volume */
-    jp->fVolume = winx_vopen(winx_toupper(jp->volume_letter));
-    if(jp->fVolume == NULL)
-        return (-1);
-
-    time = start_timing("partial defragmentation",jp);
-    
-    /* fill largest free region first */
-    defragmented_files = 0;
-    
-    if(winx_get_os_version() <= WINDOWS_2K && jp->fs_type == FS_NTFS){
-        DebugPrint("Windows NT 4.0 and Windows 2000 have stupid limitations in defrag API");
-        DebugPrint("a partial file defragmentation is almost impossible on these systems");
-        goto done;
-    }
-    
-    while(jp->termination_router((void *)jp) == 0){
-        /* find largest free space region */
-        rgn_largest = find_largest_free_region(jp);
-        if(rgn_largest == NULL) break;
-        if(rgn_largest->length < 2) break;
-        
-        /* find largest fragmented file which fragments can be joined there */
-        do {
-try_again:
-            if(jp->termination_router((void *)jp)) goto done;
-            f_largest = NULL, length = 0; tm = winx_xtime();
-            for(f = jp->fragmented_files; f; f = f->next){
-                file_length = f->f->disp.clusters;
-                if(file_length > length && can_defragment(f->f,jp) && !is_mft(f->f,jp)){
-                    f_largest = f;
-                    length = file_length;
-                }
-                if(f->next == jp->fragmented_files) break;
-            }
-            if(f_largest == NULL){
-                jp->p_counters.searching_time += winx_xtime() - tm;
-                goto part_defrag_done;
-            }
-            if(is_file_locked(f_largest->f,jp)){
-                jp->pi.processed_clusters += f_largest->f->disp.clusters;
-                jp->p_counters.searching_time += winx_xtime() - tm;
-                goto try_again;
-            }
-            jp->p_counters.searching_time += winx_xtime() - tm;
-            
-            /* find longest sequence of file blocks which fits in the current free region */
-            longest_sequence = NULL, max_n_blocks = 0, longest_sequence_length = 0;
-            for(first_block = f_largest->f->disp.blockmap; first_block; first_block = first_block->next){
-                if(!is_block_excluded(first_block)){
-                    n_blocks = 0, remaining_clusters = rgn_largest->length;
-                    for(block = first_block; block; block = block->next){
-                        if(jp->termination_router((void *)jp)) goto done;
-                        if(is_block_excluded(block)) break;
-                        if(block->length <= remaining_clusters){
-                            n_blocks ++;
-                            remaining_clusters -= block->length;
-                        } else {
-                            break;
-                        }
-                        if(block->next == f_largest->f->disp.blockmap) break;
-                    }
-                    if(n_blocks > 1 && n_blocks > max_n_blocks){
-                        longest_sequence = first_block;
-                        max_n_blocks = n_blocks;
-                        longest_sequence_length = rgn_largest->length - remaining_clusters;
-                    }
-                }
-                if(first_block->next == f_largest->f->disp.blockmap) break;
-            }
-            
-            if(longest_sequence == NULL){
-                /* fragments of the current file cannot be joined */
-                f_largest->f->user_defined_flags |= UD_FILE_TOO_LARGE;
-                /* exclude file from the current task */
-                f_largest->f->user_defined_flags |= UD_FILE_CURRENTLY_EXCLUDED;
-            }
-        } while(is_too_large(f_largest->f));
-
-        /* join fragments */
-        file = f_largest->f; /* f_largest may be destroyed by move_file */
-        target = rgn_largest->lcn; 
-        if(move_file(file,longest_sequence->vcn,longest_sequence_length,
-          target,UD_MOVE_FILE_CUT_OFF_MOVED_CLUSTERS,jp) >= 0){
-            if(jp->udo.dbgprint_level >= DBG_DETAILED)
-                DebugPrint("Partial defrag success for %ws",file->path);
-            defragmented_files ++;
-        } else {
-            DebugPrint("Partial defrag failure for %ws",file->path);
-            /* exclude file from the current task */
-            file->user_defined_flags |= UD_FILE_CURRENTLY_EXCLUDED;
-        }
-        
-        /* remove target space from the free space pool anyway */
-        jp->free_regions = winx_sub_volume_region(jp->free_regions,target,longest_sequence_length);
-    }
-
-part_defrag_done:
-    /* mark all files not processed yet as too large */
-    for(f = jp->fragmented_files; f; f = f->next){
-        if(jp->termination_router((void *)jp)) break;
-        if(can_defragment(f->f,jp) && !is_mft(f->f,jp))
-            f->f->user_defined_flags |= UD_FILE_TOO_LARGE;
-        if(f->next == jp->fragmented_files) break;
-    }
-
-done:
-    /* display amount of moved data and number of partially defragmented files */
-    DebugPrint("%I64u files partially defragmented",defragmented_files);
-    DebugPrint("%I64u clusters moved",jp->pi.moved_clusters);
-    winx_bytes_to_hr(jp->pi.moved_clusters * jp->v_info.bytes_per_cluster,1,buffer,sizeof(buffer));
-    DebugPrint("%s moved",buffer);
-    stop_timing("partial defragmentation",time,jp);
-    winx_fclose(jp->fVolume);
-    jp->fVolume = NULL;
-    return 0;
-}
-
-/**
  * @brief Auxiliary routine used to sort files in binary tree.
  */
 static int files_compare(const void *prb_a, const void *prb_b, void *prb_param)
